plugins {
    id 'dev.architectury.loom' version '1.13-SNAPSHOT' apply false
    id 'architectury-plugin' version '3.4-SNAPSHOT'
    id 'com.gradleup.shadow' version '9.3.0' apply false
}

architectury {
    minecraft = project.minecraft_version
}

allprojects {
    group = rootProject.maven_group
    version = rootProject.mod_version
}

subprojects {
    apply plugin: 'dev.architectury.loom'
    apply plugin: 'architectury-plugin'
    apply plugin: 'maven-publish'

    def modLoader = project.name


    base {
        archivesName = "${rootProject.mod_id}-${rootProject.minecraft_version}-${project.name}"
    }

    repositories {
        maven { url "https://maven.parchmentmc.org" }
        maven { url "https://maven.exodusstudio.org/releases" }
        maven { url "https://maven.exodusstudio.org/snapshots" }
        maven { url "https://maven.terraformersmc.com/releases" }
    }

    loom {
        silentMojangMappingsLicense()
    }

    dependencies {
        minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"

        mappings loom.layered() {
            officialMojangMappings()
            parchment("org.parchmentmc.data:parchment-${rootProject.minecraft_version}:${rootProject.parchment_mapping_version}@zip")
        }

        modImplementation "fr.tathan.exoconfig:exoconfig-$modLoader-${rootProject.minecraft_version}:${rootProject.exoconfig_version}"
        modImplementation "fr.tathan.sky-aesthetics:sky-aesthetics-$modLoader-${rootProject.minecraft_version}:${rootProject.skyaesthetics_version}"

    }

    java {
        withSourcesJar()

        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.release = 21
    }
}
